# oph-physics-sim

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  REPRODUCTION.md  pyproject.toml
configs/: README.md  aws-us-east-1.toml  e0_z2_patchnet.yml  e1_s3_bulk_emergence.yml  e1_s3_bw_screen_1m.yml  e1_s3_bw_screen_256k.yml  e1_s3_bw_screen_4k.yml  e1_s3_bw_screen_64k.yml  e1_s3_modular_screen_1m.yml  e1_s3_modular_screen_4k.yml  e1_s3_modular_screen_64k.yml  e1_s3_state_modular_screen_1m.yml  e1_s3_state_modular_screen_256k.yml  e1_s3_state_modular_screen_4k.yml  e1_s3_transition_response_screen_256k.yml  e1_s3_transition_response_screen_4k.yml  e1_s3_transition_response_screen_64k.yml  e2_kms_freezeout_cl_screen_256k.yml  e2_kms_freezeout_cl_screen_4k.yml  e2_kms_freezeout_cl_screen_64k.yml  e2_kms_neutral_bulk_screen_4k.yml  e2_kms_neutral_bulk_screen_64k.yml  e3_cosmo_proxy_screen_256k.yml  e3_cosmo_proxy_screen_64k.yml  e3_modular_response_h3_screen_4k.yml  e3_modular_response_h3_screen_64k_paired_ba.yml  e3_perturb_resettle_h3_screen_256k_probe.yml  e3_perturb_resettle_h3_screen_64k_dense.yml  e4_cap_flow_graph_bw_4k.yml  e4_density_bw_shared_observer_bulk_4k.yml  e4_endogenous_history_bw_4k.yml  e4_h3_bulk_demo_4k_transition_history.yml  e4_perturb_remeasure_density_bw_4k.yml  e4_perturb_remeasure_kernel_bw_4k.yml  e4_repair_affinity_density_bw_4k.yml  e4_shared_observer_bulk_256k_cmb256.yml  e4_shared_observer_bulk_256k_local_tokens_anchor0.yml  e4_shared_observer_bulk_256k_local_tokens_observers1024.yml  e4_shared_observer_bulk_256k_object_chart.yml  (+30 more)
(+1575 files in other folders)
