[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oph-fpe"
version = "0.1.0"
description = "Observer-Patch Fundamental Physics Emergence simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.0",
  "jsonschema>=4.22",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "zstandard>=0.22",
]

[project.optional-dependencies]
camb = ["camb>=1.6"]
test = ["pytest>=8.0"]
dev = ["camb>=1.6", "pytest>=8.0"]
viz = ["plotly>=5.0"]

[project.scripts]
oph-fpe = "oph_fpe.cli:main"
oph-string-vacuum = "oph_fpe.string_vacuum.cli:main"

[tool.setuptools.packages.find]
include = ["oph_fpe*", "oph_universe*", "oph_fractional*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
